pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec__516-links.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 157
expression: "replace_system_specific_urls(render_to_string(markdown_file, &dumb_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/516-links.md
---
moon[1][2]

[1]: moon.jpg
[2]: /uri
